--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="cart-container">
-    <h1>Shopping Cart</h1>
+    <h1 style="color: seagreen;">Shopping Cart</h1>
     <div class="cart-items">
       <!-- Example Cart Items -->
       <div class="cart-item">
